@@ -2,8 +2,7 @@
                    FVWM Frequently Asked Questions
 ======================================================================
 
-Last updated June 23, 2001 for beta release 2.3.33 and official
-release 2.2.5.
+Last updated June 23, 2001 for beta release 2.3.33 and official release 2.2.5.
 
 Contents
 
