@@ -1,3 +1,9 @@
+2001-06-23  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* make_fvwmdist.sh:
+	corrected typos
+	update version number in FAQ too
+
 2001-05-06  Mikhael Goikhman  <migo@homemail.com>
 
 	* fvwm-config.in:
